--- a/HiddenVilla_Server/Pages/HotelRoom/HotelRoomUpsert.razor
+++ b/HiddenVilla_Server/Pages/HotelRoom/HotelRoomUpsert.razor
@@ -8,6 +8,7 @@
 @inject NavigationManager navMan
 @inject IJSRuntime JsRuntime
 @inject IFileUpload fileUpload 
+@attribute [Authorize]
 
 <div class="row mt-2 mb-5">
     <h3 class="card-title text-info mb-3 ml-3">@Title Hotel Room</h3>
