Added blazored localstorage Booking number of nights

--- a/HiddenVilla_Client/Pages/Index.razor
+++ b/HiddenVilla_Client/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
 @using HiddenVilla_Client.Model.ViewModel
+@inject ILocalStorageService localStorage
+@inject IJSRuntime jsRunTime
+@inject NavigationManager navigationManager
 
 <div class="row p-0 m-0">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -25,7 +28,7 @@
         </a>
     </div>
 </div>
-<EditForm Model="HomeModel">
+<EditForm Model="HomeModel" OnValidSubmit="SaveInitalData">
     <div class="row p-0 mx-0 mt-4">
 
         <div class="col-12 col-md-5  offset-md-1 pl-2  pr-2 pr-md-0">
@@ -61,4 +64,22 @@
 
 @code{
     public HomeVM HomeModel { get; set; } = new HomeVM();
+
+    private async Task SaveInitalData()
+    {
+        try
+        {
+            HomeModel.EndDate = HomeModel.StartDate.AddDays(HomeModel.NoOfNights);
+
+            await localStorage.SetItemAsync(SD.Local_InitialBooking, HomeModel);
+
+            navigationManager.NavigateTo("hotel/rooms", true);
+
+        }
+        catch (Exception e)
+        {
+
+            await jsRunTime.ToastrError(e.Message);
+        }
+    }
 }
