--- a/HiddenVilla_Client/_Imports.razor
+++ b/HiddenVilla_Client/_Imports.razor
@@ -11,3 +11,6 @@
 @using Blazored.LocalStorage
 @using HiddenVilla_Client.Helper
 @using Common
+@using HiddenVilla_Client.Model.ViewModel
+@using Models
+@using HiddenVilla_Client.Service.IService 
