Amenities services to API and client

--- a/HiddenVilla_Client/Pages/Index.razor
+++ b/HiddenVilla_Client/Pages/Index.razor
@@ -3,6 +3,21 @@
 @inject ILocalStorageService localStorage
 @inject IJSRuntime jsRunTime
 @inject NavigationManager navigationManager
+@inject IHotelAmenityService amenityService
+@inject IJSRuntime jsRuntime
+
+
+
+@if (IsProcessing)
+{
+    <div style="position:fixed;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
+        <img src="images/ajax-loader.gif" />
+    </div>
+}
+else
+{
+
+
 
 <div class="row p-0 m-0">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -61,9 +76,55 @@
 
     </div>
 </EditForm>
+<hr />
+<div class="container pt-4">
+    <div class="row">
+        <div class="col-md-8 offset-md-2 text-center">
+            <h2 class="text-warning">Explore our Amenities</h2>
+            <p class="lead">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+        </div>
+    </div>
+    <div class="row">
+        @foreach (var amenity in HotelAmenities)
+        {
+            <div class="col-md-4 col-6 p-4">
+                <div style="border:1px solid #d5d5d5; border-radius:20px;">
+                    <div class="row col-4 offset-4 p-4">
+                        <i class="@amenity.IconStyle fa-4x"></i>
+                    </div>
+                    <div class="text-center justify-content-center">
+                        <h5 class="text-warning">@amenity.Name</h5>
+                        <p>@amenity.Description</p>
+                    </div>
+
+                </div>
+            </div>
+        }
+    </div>
+
+</div>
+
+}
 
 @code{
     public HomeVM HomeModel { get; set; } = new HomeVM();
+
+    public IEnumerable<HotelAmenityDTO> HotelAmenities { get; set; } = new List<HotelAmenityDTO>();
+    public bool IsProcessing { get; set; } = false;
+
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            await LoadHotelAmenities();
+        }
+        catch (Exception e)
+        {
+            await jsRuntime.ToastrError(e.Message);
+        }
+    }
+
 
     private async Task SaveInitalData()
     {
@@ -82,4 +143,15 @@
             await jsRunTime.ToastrError(e.Message);
         }
     }
+
+
+
+
+    private async Task LoadHotelAmenities()
+    {
+        IsProcessing = true;
+        HotelAmenities = await amenityService.GetHotelAmenities();
+        IsProcessing = false;
+    }
+
 }
