--- a/HiddenVilla_Client/Pages/HotelRooms/RoomDetails.razor
+++ b/HiddenVilla_Client/Pages/HotelRooms/RoomDetails.razor
@@ -3,6 +3,13 @@
 @inject ILocalStorageService localStorage
 @inject IHotelRoomService hotelRoomService
 
+@if(HotelBooking?.OrderDetails?.HotelRoomDTO?.HotelRoomImages == null)
+{
+    <div class="spinner"></div>
+}
+else
+{
+
 <div class="mt-4 mx-4 px-0 px-md-5 mx-md-5">
 
     <div class="row p-2 my-3 " style="border-radius:20px; ">
@@ -38,18 +45,22 @@
                 </div>
                 <div class="col-6">
                     <span class="float-right pt-4">
-                        <span class="float-right">Max Occupancy : XXXX adults </span><br />
-                        <span class="float-right pt-1">Villa Size : XXXX sqft</span><br />
-                        <h4 class="text-warning font-weight-bold pt-5 pl-5">USD <span style="border-bottom:1px solid #ff6a00"> XXXX</span></h4>
-                        <span class="float-right">Cost for XXXX nights</span>
+                        <span class="float-right">Max Occupancy : @HotelBooking.OrderDetails.HotelRoomDTO.Occupancy adults </span><br />
+                        <span class="float-right pt-1">Villa Size : @HotelBooking.OrderDetails.HotelRoomDTO.SqFt sqft</span><br />
+                        <h4 class="text-warning font-weight-bold pt-5 pl-5">USD 
+                            <span style="border-bottom:1px solid #ff6a00">
+                                @HotelBooking.OrderDetails.HotelRoomDTO.TotalAmount.ToString("#,#.00#;(#,#.00#)")
+                            </span>
+                        </h4>
+                        <span class="float-right">Cost for @HotelBooking.OrderDetails.HotelRoomDTO.TotalDays nights</span>
                     </span>
                 </div>
             </div>
             <div class="row p-2">
                 <div class="col-12">
-                    <p class="card-title text-warning" style="font-size:xx-large">XXNAMEXX</p>
+                    <p class="card-title text-warning" style="font-size:xx-large">@HotelBooking.OrderDetails.HotelRoomDTO.Name</p>
                     <p class="card-text" style="font-size:large">
-                        XXDETAILSXX
+                        @((MarkupString)@HotelBooking.OrderDetails.HotelRoomDTO.Details)
                     </p>
                 </div>
 
@@ -57,49 +68,57 @@
         </div>
 
         <div class="col-12 col-lg-5 p-4 2 mt-4 mt-md-0" style="border: 1px solid #fff;">
-            <form Model="HotelRoomBooking" class="container" OnValidSubmit="HandleCheckout">
-
+            <EditForm Model="HotelBooking" class="container" OnValidSubmit="HandleCheckout">
+                
 
                 <div class="row px-2 text-success border-bottom"><div class="col-7 py-1"><p style="font-size:x-large;margin:0px;">Enter Details</p></div></div>
 
                 <div class="form-group pt-2">
                     <label class="text-warning">Name</label>
-                    <input type="text" class="form-control" />
+                    <InputText @bind-Value="HotelBooking.OrderDetails.Name" type="text" class="form-control" />
+                    @*<ValidationMessage For="(() => HotelBooking.OrderDetails.Name)" />*@
                 </div>
                 <div class="form-group pt-2">
                     <label class="text-warning">Phone</label>
-                    <input type="text" class="form-control" />
+                    <InputText @bind-Value="HotelBooking.OrderDetails.Phone" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="text-warning">Email</label>
-                    <input type="text" class="form-control" />
+                    <InputText @bind-Value="HotelBooking.OrderDetails.Email" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="text-warning">Check in Date</label>
-                    <input type="date" disabled class="form-control" />
+                    <InputDate @bind-Value="HotelBooking.OrderDetails.CheckInDate" type="date" disabled class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="text-warning">Check Out Date</label>
-                    <input type="date" disabled="disabled" class="form-control" />
+                    <InputDate @bind-Value="HotelBooking.OrderDetails.CheckOutDate" type="date" disabled class="form-control" />
                 </div>
                 <div class="form-group">
                     <label class="text-warning">No. of nights</label>
-                    <select class="form-control">
+                    <select class="form-control" value="@NoOfNights" @onchange="HandleNoOfNightsChange">
                         @for (var i = 1; i <= 10; i++)
                         {
-                            <option value="@i">@i</option>
+                            if (i == NoOfNights)
+                            {
+                                <option value="@i" selected="selected">@i</option>
+                            }
+                            else
+                            {
+                                <option value="@i">@i</option>
+                            }
                         }
                     </select>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success form-control">Checkout Now</button>
                 </div>
-            </form>
+            </EditForm>
         </div>
     </div>
 </div>
 
-
+}
 
 @code {
     [Parameter]
@@ -113,6 +132,8 @@
     {
         try
         {
+            //await Task.Delay(5000);
+
             HotelBooking.OrderDetails = new RoomOrderDetailsDTO();
 
             if (Id != null)
@@ -122,7 +143,8 @@
                     var roomInitialInfo = await localStorage.GetItemAsync<HomeVM>(SD.Local_InitialBooking);
 
                     HotelBooking.OrderDetails.HotelRoomDTO = await hotelRoomService.GetHotelRoomDetails(Id.Value,
-                        roomInitialInfo.StartDate.ToString("MM/dd/yyyy"), roomInitialInfo.EndDate.ToString("MM/dd/yyyy"));
+                    roomInitialInfo.StartDate.ToString("MM/dd/yyyy"), roomInitialInfo.EndDate.ToString("MM/dd/yyyy"));
+
                     NoOfNights = roomInitialInfo.NoOfNights;
                     HotelBooking.OrderDetails.CheckInDate = roomInitialInfo.StartDate;
                     HotelBooking.OrderDetails.CheckOutDate = roomInitialInfo.EndDate;
@@ -134,6 +156,7 @@
                 {
                     HotelBooking.OrderDetails.HotelRoomDTO = await hotelRoomService.GetHotelRoomDetails(Id.Value,
                         DateTime.Now.ToString("MM/dd/yyyy"), DateTime.Now.AddDays(1).ToString("MM/dd/yyyy"));
+
                     NoOfNights = 1;
                     HotelBooking.OrderDetails.CheckInDate = DateTime.Now;
                     HotelBooking.OrderDetails.CheckOutDate = DateTime.Now.AddDays(1);
@@ -148,5 +171,48 @@
 
             await jsRuntime.ToastrError(e.Message);
         }
+    }
+
+    private async Task HandleNoOfNightsChange(ChangeEventArgs e)
+    {
+        NoOfNights = Convert.ToInt32(e.Value.ToString());
+
+        HotelBooking.OrderDetails.HotelRoomDTO = await hotelRoomService.GetHotelRoomDetails(Id.Value,
+        HotelBooking.OrderDetails.CheckInDate.ToString("MM/dd/yyyy"),
+        HotelBooking.OrderDetails.CheckInDate.AddDays(NoOfNights).ToString("MM/dd/yyyy"));
+
+        HotelBooking.OrderDetails.CheckOutDate = HotelBooking.OrderDetails.CheckInDate.AddDays(NoOfNights);
+        HotelBooking.OrderDetails.HotelRoomDTO.TotalDays = NoOfNights;
+        HotelBooking.OrderDetails.HotelRoomDTO.TotalAmount = NoOfNights * HotelBooking.OrderDetails.HotelRoomDTO.RegularRate;
+    }
+
+    private async Task HandleCheckout()
+    {
+        if(!await HandleValidation())
+        {
+            return;
+        }
+    }
+
+    private async Task<bool> HandleValidation()
+    {
+        if (string.IsNullOrEmpty(HotelBooking.OrderDetails.Name))
+        {
+            await jsRuntime.ToastrError("Name cannot be empty");
+            return false;
+        }
+
+        if (string.IsNullOrEmpty(HotelBooking.OrderDetails.Phone))
+        {
+            await jsRuntime.ToastrError("Phone cannot be empty");
+            return false;
+        }
+
+        if (string.IsNullOrEmpty(HotelBooking.OrderDetails.Email))
+        {
+            await jsRuntime.ToastrError("Email cannot be empty");
+            return false;
+        }
+        return true;
     }
 }
