--- a/HiddenVilla_Client/Pages/Stripe/Success_Payment.razor
+++ b/HiddenVilla_Client/Pages/Stripe/Success_Payment.razor
@@ -2,7 +2,15 @@
 @inject ILocalStorageService localStorage
 @inject IRoomOrderDetailsService roomOrderDetailService
 
-    <div class="container">
+<div class="container">
+    @if (!IsPaymentComplete)
+    {
+        <div style="position:fixed;top:50%;left:50%;margin-top:-50px;margin-left:-100px;">
+            <img src="images/ajax-loader.gif" />
+        </div>
+    }
+    else
+    {
         <div class="row mt-4 pt-4">
             <div class="col-10 offset-1 text-center">
                 <h2 class="text-warning">Booking Confirmed</h2>
@@ -12,9 +20,25 @@
                 <img src="/images/confirmation.jpg" width="100%" style="border-radius:30px;" />
             </div>
         </div>
-    </div>
+    }
+</div>
 
 @code{
-    private bool IsPaymentCompelte { get; set; } = false;
+    private bool IsPaymentComplete { get; set; } = false;
     private int OrderId { get; set; }
+
+    protected override async Task OnInitializedAsync()
+    {
+        var orderDetails = await localStorage.GetItemAsync<RoomOrderDetailsDTO>(SD.Local_RoomOrderDetails);
+        OrderId = orderDetails.Id;
+
+        var finalRoomOrderDetails = await roomOrderDetailService.MarkPaymentSuccessful(orderDetails);
+        if (finalRoomOrderDetails.Status == SD.Status_Booked)
+        {
+            await localStorage.RemoveItemAsync(SD.Local_RoomOrderDetails);
+            await localStorage.RemoveItemAsync(SD.Local_InitialBooking);
+
+            IsPaymentComplete = true;
+        }
+    }
 }
