UserInfo from LocalStorage

--- a/HiddenVilla_Client/Pages/Stripe/Success_Payment.razor
+++ b/HiddenVilla_Client/Pages/Stripe/Success_Payment.razor
@@ -1,6 +1,7 @@
 ﻿@page "/success-payment"
 @inject ILocalStorageService localStorage
 @inject IRoomOrderDetailsService roomOrderDetailService
+@attribute [Authorize(Roles = SD.Role_Customer)]
 
 <div class="container">
     @if (!IsPaymentComplete)
