--- a/HiddenVilla_Client/_Imports.razor
+++ b/HiddenVilla_Client/_Imports.razor
@@ -13,5 +13,6 @@
 @using Common
 @using HiddenVilla_Client.Model.ViewModel
 @using Models
-@using HiddenVilla_Client.Service.IService 
+@using HiddenVilla_Client.Service.IService
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
