--- a/HiddenVilla_Server/_Imports.razor
+++ b/HiddenVilla_Server/_Imports.razor
@@ -11,3 +11,4 @@
 @using HiddenVilla_Server.Pages.LearnBlazor.LearnBlazorComponents
 @using HiddenVilla_Server.Helper
 @using Blazored.TextEditor
+@using Radzen.Blazor
