--- a/HiddenVilla_Server/Pages/Counter.razor
+++ b/HiddenVilla_Server/Pages/Counter.razor
@@ -1,7 +1,10 @@
 ﻿@page "/counter"
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedLocalStorage localStorage
+@inject ProtectedSessionStorage sessionStorage 
 
 <h1>Counter</h1>
-<div class="bobba">båg!</div>
+
 <p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
@@ -9,8 +12,11 @@
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    private async Task IncrementCount()
     {
         currentCount++;
+
+        await localStorage.SetAsync("counterLocal", currentCount);
+        await sessionStorage.SetAsync("counterSession", currentCount);
     }
 }
