Radzen Room order details

--- a/HiddenVilla_Server/Pages/HotelRoomOrder/HotelRoomOrderList.razor
+++ b/HiddenVilla_Server/Pages/HotelRoomOrder/HotelRoomOrderList.razor
@@ -1,5 +1,52 @@
-﻿<h3>HotelRoomOrderList</h3>
+﻿@page "/hotel-room-order"
+@using Models
+@using Business.Repository.IRepository
+@using Radzen
+@inject IRoomOrderDetailsRepository roomOrderDetailRepository
+@inject IJSRuntime jsRuntime
+@inject NavigationManager navMan
+
+@if (!IsLoading)
+{
+    <h4 class="card-title text-info">Hotel Room Order's</h4>
+    <RadzenGrid AllowFiltering="true" 
+                FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" 
+                FilterMode="FilterMode.Advanced" 
+                AllowPaging="true" PageSize="4"
+                AllowSorting="true" Data="@HotelRoomOrders" TItem="RoomOrderDetailsDTO" ColumnWidth="200px" AllowColumnResize="true">
+        <Columns>
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Name" Title="Customer Name" />
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Phone" Title="Customer Name" />
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Email" Title="Customer Name" />
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="HotelRoomDTO.Name" Title="Room" />
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Status" Title="Status" />
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="CheckInDate" Title="Check in Date">
+                <Template Context="data">
+                    @String.Format("{0:d}", data.CheckInDate)
+                </Template>
+            </RadzenGridColumn>
+            <RadzenGridColumn TItem="RoomOrderDetailsDTO" Property="Id" Title="">
+                <Template Context="data">
+                    <NavLink class="btn btn-primary" href="@($"hotel-room-order/details/{data.Id}")">Edit</NavLink>
+                </Template>
+            </RadzenGridColumn>
+            
+        </Columns>
+    </RadzenGrid>
+}
+else
+{
+    <p>Loading...</p>
+}
 
 @code {
+    private IEnumerable<RoomOrderDetailsDTO> HotelRoomOrders { get; set; } = new List<RoomOrderDetailsDTO>();
+    private bool IsLoading { get; set; } = false;
 
+    protected override async Task OnInitializedAsync()
+    {
+        IsLoading = true;
+        HotelRoomOrders = await roomOrderDetailRepository.GetAllRoomOrderDetails();
+        IsLoading = false;
+    }
 }
